AM_CFLAGS = -g -O2 -W -Wall
ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libpivumeter.la

libpivumeter_la_SOURCES = src/pivumeter.c src/devices/scroll-phat.c src/devices/scroll-phat-hd.c src/devices/blinkt.c src/devices/speaker-phat.c src/devices/phat-beat.c src/devices/ws2812-strip.c src/rpi_ws281x/mailbox.c src/rpi_ws281x/ws2811.c src/rpi_ws281x/pwm.c src/rpi_ws281x/pcm.c src/rpi_ws281x/dma.c src/rpi_ws281x/rpihw.c 